<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
       <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
       <string name="eight">8</string>
    <string name="nigh">9</string>
    <string name="plus">+</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
    <string name="devide">/</string>
     <string name="mod">%</string>
    <string name="equal">=</string>
                
</resources>